# Flask-GoogleMaps

./: .gitignore  .pre-commit-config.yaml  Changlog.md  LICENSE  MANIFEST.in  Makefile  README.md  example.html  example.py  flit.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: ci.yaml
docs/: mkdocs.yml
docs/docs/: contribute.md  how_it_works.md  index.md  installation.md
examples/: example.py  example_2.py  example_of_a.secrets.toml  examples_requirements.txt  jsonify_examples.py  simple.py
examples/templates/: example.html  example_2.html  example_fullmap.html  jsonified.html  simple.html
flask_googlemaps/: __init__.py  icons.py  image.py  marker.py  marker_content.py  marker_content_factory.py  pin.py
flask_googlemaps/templates/googlemaps/: gmapjs.html
flask_googlemaps/tests/: test_map.py
flaskext/: __init__.py
flaskext/templates/googlemaps/: gmapjs.html
tests/: test_image.py  test_map.py  test_marker.py  test_marker_content_factory.py  test_pin.py  test_version.py
