[tool.poetry]
name = "flask_googlemaps"
version = "0.5.0"
description = "Easy way to add GoogleMaps to Flask Applications"
authors = ["Riverfount - Vulgo Vicente Marçal <vicente.marcal@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/flask-extensions/Flask-GoogleMaps"
homepage = "https://flaskextensions.com"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
packages = [
    {include = "flask_googlemaps"}
]
include = ["flask_googlemaps/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9"
flask = ">=3.0.3"
pre-commit = "3.7.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.18"
mkdocs-minify-plugin = "^0.8.0"
requests = "^2.31.0"
jsmin = "^3.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
dynaconf = "^3.2.5"
flake8 = "^7.0.0"
black = "^24.4.0"
gitchangelog = "^3.0.4"
pylint = "^3.1.0"
Pygments = "^2.17.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"
